STYLE: Component flex layout shift fixed with refactoring height as fixed value

--- a/frontend/src/Pages/AboutPage/styles.module.css
+++ b/frontend/src/Pages/AboutPage/styles.module.css
@@ -13,3 +13,7 @@
 .header {
     color: #7A7A7A;
 }
+
+.innerContainer {
+    min-height: 700px;
+}
